# endless-orgasm-machine

./: .clang-format  .gitignore  8mb_spiffs.csv  CMakeLists.txt  README.md  library.properties  platformio.ini  sdkconfig.esp32-c6-devkitm-1  sdkconfig.esp32dev  sdkconfig.waveshare_esp32_s3_zero
data/: config.json  index.html  server.crt
data/ui/: index.html  server.key
doc/: .~lock.EOM UserGuide.docx#  Config.json.md  EOM UserGuide.docx  WebSocket.md
doc/building/: building.md
eomui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
eomui/public/: index.html  manifest.webmanifest  sw.js
eomui/src/: App.svelte  app.css  main.ts
hardware/: lid.stl  mold.stl  plug.scad  plugXS.stl
include/: config.h  gap.h  gatt_svc.h  polyfill.h  wifi_manager.h
include/api/: broadcast.h
include/util/: running_average.h
lib/eom-hal-esp32/: eom-hal-esp32.c  eom-hal-esp32.h
src/: CMakeLists.txt  config.c  config_defs.c  eom-hal-esp32.c  gap.c  gatt_svc.c  idf_component.yml  main.c  orgasm_control.c  polyfill.c  version.c  wifi_manager.c
src/api/: broadcast.c  config.c  edging.c  system.c
src/include/: config.h  eom-hal-esp32.h  gap.h  orgasm_control.h  vibration_mode_controller.h
src/include/assets/: config_help.h
src/include/system/: websocket_handler.h
src/include/util/: fs.h
src/system/: http_server.c  websocket_handler.c
src/util/: fs.c  list.c  running_average.c
src/vibration_modes/: depletion_controller.c  enhancement_controller.c  pattern_controller.c  ramp_stop_controller.c
